# libarrier

./: .clang-format  .gitignore  CMakeLists.txt  README.md  libarrier.cpp  libarrier.h
include/libarrier/: arrier.hpp  binarydata.hpp  functional.hpp  match.hpp  meta.hpp  ringbuffer.hpp  task.hpp  textfile_reader.hpp  timer.hpp
